# ComfyUI-Voice

./: .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  __init__.py  pyproject.toml
comfyui_voice/: __init__.py  audio_utils.py  base.py  downloads.py  extension.py  manager.py  paths.py  registry.py  runtime.py  schema_form.py  types.py
comfyui_voice/_vendor/higgs_native/: loader.py
comfyui_voice/_vendor/melo/monotonic_align/: __init__.py
comfyui_voice/_vendor/melo/text/: __init__.py  cleaner.py
comfyui_voice/_vendor/moss_soundeffect_v2/: VENDORED_NOTES.md
comfyui_voice/_vendor/moss_soundeffect_v2/diffsynth/models/: _audiotools_compat.py  dac_vae.py
comfyui_voice/_vendor/moss_soundeffect_v2/diffsynth/pipelines/: wan_audio.py
comfyui_voice/engines/asr/: _reference_echo.py  faster_whisper.py  korean_whisper.py  qwen3_asr.py  sensevoice.py  whisper_v3.py  whisperx.py
comfyui_voice/engines/music/: _reference_music.py  ace_step.py
comfyui_voice/engines/sfx/: _reference_sfx.py  moss_soundeffect.py
comfyui_voice/engines/tts/: _reference_tone.py  chatterbox.py  cosyvoice3.py  higgs_audio_v3.py  kokoro.py  melotts_korean.py  mms_tts_korean.py  oute_tts.py  qwen3_tts.py  supertonic.py
comfyui_voice/nodes/: asr.py  gen.py  tts.py  util.py
comfyui_voice/processors/: asr_processor.py  gen_processor.py  tts_processor.py
comfyui_voice/runtimes/: worker.py
tests/: test_core.py
